Fixed a bug where it would always shuffle on going into fullscreen * Game container overflow is now hidden * Game container is no longer resized on updates

--- a/html/react/src/widgets/GameContainer/GameContainer.module.scss
+++ b/html/react/src/widgets/GameContainer/GameContainer.module.scss
@@ -5,6 +5,7 @@
 	width: 100%;
 	display: flex;
 	justify-content: center;
+	overflow: hidden;
 }
 
 .innerContainer {
